--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -29,6 +29,8 @@ jobs:
         run: npm ci
       - name: Build with Next.js
         run: npx next build
+      - name: Add .nojekyll file
+        run: touch ./out/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
